@@ -1,6 +1,11 @@
 # ChangeLog for kde-misc/filelight
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.40 2009/11/10 02:30:08 fauli Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.41 2010/03/06 09:17:37 ssuominen Exp $
+
+  06 Mar 2010; Samuli Suominen <ssuominen@gentoo.org>
+  filelight-1.9_rc3.ebuild:
+  Remove unused qimageblitz include wrt #307823, thanks to Philipp
+  Reinkemeier for patch.
 
   10 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
   filelight-1.9_rc3.ebuild:
